--- a/PlanesTour/Views/Shared/_Layout.cshtml
+++ b/PlanesTour/Views/Shared/_Layout.cshtml
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title Planes Tour</title>
     @*@Styles.Render("~/Content/css")*@
-    @Scripts.Render("~/bundles/modernizr")
+    @*@Scripts.Render("~/bundles/modernizr")*@
+
+    <!-- Favicon -->
+    <link href="~/Content/img/favicon.ico" rel="icon" type="image/x-icon">
+
     <!-- Bootstrap CSS -->
-    <link href="/Content/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="~/Content/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Plugin CSS -->
@@ -26,20 +30,28 @@
 
 </head>
 <body>
-    <!-- Header -->
+
+    <!-- Pre-loader -->
+    <div id="pre-loader"></div>
+
     <header>
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
                     <a href="" class="logo">
-                        <img src="~/Content/img/logo.png" alt="Brand">
+                        <img src="/Content/img/logo.png" alt="Brand">
                     </a>
                 </div>
                 <div class="col-sm-6 hidden-xs text-right">
-                    <span class="header-lead">Teléfono (809) 596 8598<br>Whatsapp (829) 927 4596</span>
+                    <div class="header-lead">
+                        <span class="fa fa-phone"></span> Teléfono: (809) 596 8598
+                        <div>
+                            <div class="header-lead">
+                                <span class="fa fa-whatsapp"></span> Whatsapp: (829) 927 4596
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
     </header>
 
 
@@ -56,20 +68,33 @@
             <div class="collapse navbar-collapse" id="pt-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="/">Inicio</a>
+                        <a href="~/">Inicio</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Destinos <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#">Santo Domingo</a>
+                            </li>
+                            <li>
+                                <a href="#">Santiago</a>
+                            </li>
+                            <li>
+                                <a href="#">Punta Cana</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="/Location/">Destinos</a>
-                    </li>
-                    <li>
-                        <a href="">Acerca de nosotros</a>
+                        <a href="#">Acerca de nosotros</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-        @RenderBody()
+    @RenderBody()
 
 
     <!-- Aside footer -->
@@ -88,7 +113,7 @@
                             <a href="/" class="text-gray">Inicio</a>
                         </li>
                         <li>
-                            <a href="/Locations" class="text-gray">Hoteles</a>
+                            <a href="#" class="text-gray">Hoteles</a>
                         </li>
                         <li>
                             <a href="" class="text-gray">Acerca de nosotros</a>
@@ -113,7 +138,7 @@
             </div>
         </div>
     </footer>
-    
+
     @RenderSection("scripts", required: false)
     <!-- JQuery -->
     @Scripts.Render("~/bundles/jquery")
