--- a/PlanesTour/Views/Home/About.cshtml
+++ b/PlanesTour/Views/Home/About.cshtml
@@ -1,7 +1,67 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿   <!-- Content -->
+<main>
+    <section>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h2>Acerca de nosotros</h2>
+                        <hr class="small">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <h4>Nuestro Objectivo</h4>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <ul>
+                        <li>
+                            <strong>Este es un subtitulo:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                        <li>
+                            <strong>Este es un subtitulo:</strong> Sed do eiusmod tempor incididunt ut labore et dolore.
+                        </li>
+                        <li>
+                            <strong>Este es un subtitulo:</strong> Ut enim ad minim veniam, quis nostrud exercitation.
+                        </li>
+                    </ul>
 
-<p>Use this area to provide additional information.</p>
+                    <h4>Nuestro Compromiso</h4>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                </div>
+
+                <div class="col-md-5 col-md-offset-2">
+                    <div class="form-contact">
+                        <h4>Contactanos</h4>
+                        <ul class="form-contact-phones list-unstyled">
+                            <li class="header-lead">
+                                <span class="fa fa-phone"></span> <strong>Teléfono:</strong> (809) 596 8598
+                            <li>
+                            <li class="header-lead">
+                                <span class="fa fa-whatsapp"></span> <strong>Whatsapp:</strong> (829) 927 4596
+                            </li>
+                        </ul>
+                        <form id="form-validate" action="#">
+                            <div class="form-group">
+                                <label for="c-name">Nombre:</label>
+                                <input type="text" id="c-name" class="form-control" name="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="c-email">Correo:</label>
+                                <input type="email" id="c-email" class="form-control" name="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="c-message">Mensaje:</label>
+                                <textarea id="c-message" class="form-control" rows="5" name="message"></textarea>
+                            </div>
+                            <button type="submit" id="btn-validate" class="btn btn-primary btn-xl">Enviar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
